--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6"
   },
+  "homepage": "https://josh3021.github.io/framer-practice",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +24,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
